--- a/viewer.html
+++ b/viewer.html
@@ -37,7 +37,7 @@
       showImportControls: false,
     });
 
-    const baseUrl = "https://raw.githubusercontent.com/structural-interactome/human-interactome/main/interaction_structures/";
+    const baseUrl = "https://structural-interactome.github.io/human-interactome/interaction_structures/";
     const defaultFile = "Q6ZV65_O14744_Boltz-2_v2-1-1.cif";
 
     // Load default structure
