--- a/viewer.html
+++ b/viewer.html
@@ -37,8 +37,8 @@
       showImportControls: false,
     });
 
-    const baseUrl = "https://structural-interactome.github.io/human-interactome/interaction_structures/";
-    const defaultFile = "Q6ZV65_O14744_Boltz-2_v2-1-1.cif";
+    const baseUrl = "https://models.rcsb.org/v1/8COG/cif/";
+    const defaultFile = "model";
 
     // Load default structure
     viewer.loadStructureFromUrl(baseUrl + defaultFile, "mmcif");
