--- a/viewer.html
+++ b/viewer.html
@@ -32,7 +32,7 @@
   <div id="viewer"></div>
 
   <script>
-    const viewer = new Molstar.Viewer("viewer", {
+    const viewer = new molstar.Viewer("viewer", {
       layoutIsExpanded: true,
       showImportControls: false,
     });
