--- a/viewer.html
+++ b/viewer.html
@@ -1,11 +1,37 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Mol* Viewer</title>
-  <script src="https://cdn.jsdelivr.net/npm/molstar@3.0.0/build/viewer/molstar.js"></script>
+
+  <!-- Use Mol* ES module -->
+  <script type="module">
+    import { Viewer } from 'https://cdn.jsdelivr.net/npm/molstar@3.0.0/build/viewer/molstar.es.js';
+
+    const viewer = new Viewer("viewer", {
+      layoutIsExpanded: true,
+      showImportControls: false,
+    });
+
+    const baseUrl = "https://structural-interactome.github.io/human-interactome/interaction_structures/";
+    const defaultFile = "Q6ZV65_O14744_Boltz-2_v2-1-1.cif";
+
+    viewer.loadStructureFromUrl(baseUrl + defaultFile, "mmcif");
+
+    document.getElementById("structureInput").addEventListener("change", () => {
+      const filename = document.getElementById("structureInput").value.trim();
+      if (!filename.endsWith(".cif")) {
+        alert("Please enter a valid .cif filename");
+        return;
+      }
+      viewer.loadStructureFromUrl(baseUrl + filename, "mmcif")
+        .catch(err => alert("Failed to load structure: " + err));
+    });
+  </script>
+
+  <!-- Mol* styling -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/molstar@3.0.0/build/viewer/molstar.css" />
+
   <style>
     body { margin: 0; font-family: sans-serif; background-color: #ffffff; }
     #controls {
@@ -30,29 +56,5 @@
     <input type="text" id="structureInput" placeholder="e.g. Q6ZV65_O14744_Boltz-2_v2-1-1.cif" />
   </div>
   <div id="viewer"></div>
-
-  <script>
-    const viewer = new molstar.Viewer("viewer", {
-      layoutIsExpanded: true,
-      showImportControls: false,
-    });
-
-    const baseUrl = "https://models.rcsb.org/v1/8COG/cif/";
-    const defaultFile = "model";
-
-    // Load default structure
-    viewer.loadStructureFromUrl(baseUrl + defaultFile, "mmcif");
-
-    // Hook up search bar
-    document.getElementById("structureInput").addEventListener("change", () => {
-      const filename = document.getElementById("structureInput").value.trim();
-      if (!filename.endsWith(".cif")) {
-        alert("Please enter a valid .cif filename");
-        return;
-      }
-      viewer.loadStructureFromUrl(baseUrl + filename, "mmcif")
-        .catch(err => alert("Failed to load structure: " + err));
-    });
-  </script>
 </body>
 </html>
