--- a/viewer.html
+++ b/viewer.html
@@ -3,37 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <title>Mol* CIF Viewer</title>
-  <script src="https://unpkg.com/molstar/build/viewer/molstar.js"></script>
   <style>
-    html, body { margin: 0; padding: 0; height: 100%; }
+    html, body { margin: 0; padding: 0; height: 100%; width: 100%; }
     #app { width: 100%; height: 100vh; }
   </style>
 </head>
 <body>
-  <div id="app"></div>
-  <script>
-    async function initViewer() {
-      const params = new URLSearchParams(window.location.search);
-      const fileUrl = params.get('file');
+  <div id="app">Loading Mol* Viewer...</div>
+  <script type="module">
+    import { Viewer } from 'https://cdn.jsdelivr.net/npm/molstar@3.0.0/build/viewer/viewer.es.js';
 
-      const viewer = new Molstar.Viewer('app', {
-        layoutIsExpanded: true,
-        layoutShowControls: true,
-        showImportControls: false,
+    const params = new URLSearchParams(window.location.search);
+    const fileUrl = params.get("file");
+
+    const viewer = new Viewer("app", {
+      layoutIsExpanded: true,
+      layoutShowControls: true,
+    });
+
+    if (fileUrl) {
+      viewer.loadStructureFromUrl(fileUrl, "cif").catch(err => {
+        document.getElementById("app").innerText = "Failed to load structure: " + err.message;
+        console.error(err);
       });
-
-      if (fileUrl) {
-        try {
-          await viewer.loadStructureFromUrl(fileUrl, 'cif');
-        } catch (e) {
-          document.body.innerHTML = '<p style="padding:20px;">Failed to load structure: ' + e.message + '</p>';
-        }
-      } else {
-        document.body.innerHTML = '<p style="padding:20px;">No file specified. Add ?file=... to the URL.</p>';
-      }
+    } else {
+      document.getElementById("app").innerText = "No file specified. Use ?file=... in the URL.";
     }
-
-    initViewer();
   </script>
 </body>
 </html>
