--- a/viewer.html
+++ b/viewer.html
@@ -2,33 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mol* CIF Viewer</title>
+  <title>Mol* Viewer (UMD)</title>
+  <script src="https://cdn.jsdelivr.net/npm/molstar@3.0.0/build/viewer/molstar.js"></script>
   <style>
     html, body { margin: 0; padding: 0; height: 100%; width: 100%; }
     #app { width: 100%; height: 100vh; }
   </style>
 </head>
 <body>
-  <div id="app">Loading Mol* Viewer...</div>
-  <script type="module">
-    import { Viewer } from 'https://cdn.jsdelivr.net/npm/molstar@3.0.0/build/viewer/viewer.es.js';
-
-    const params = new URLSearchParams(window.location.search);
-    const fileUrl = params.get("file");
-
-    const viewer = new Viewer("app", {
-      layoutIsExpanded: true,
-      layoutShowControls: true,
-    });
-
-    if (fileUrl) {
-      viewer.loadStructureFromUrl(fileUrl, "cif").catch(err => {
-        document.getElementById("app").innerText = "Failed to load structure: " + err.message;
-        console.error(err);
+  <div id="app">Initializing viewer...</div>
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      const viewer = new Molstar.Viewer('app', {
+        layoutIsExpanded: true,
+        layoutShowControls: true,
       });
-    } else {
-      document.getElementById("app").innerText = "No file specified. Use ?file=... in the URL.";
-    }
+
+      const params = new URLSearchParams(window.location.search);
+      const file = params.get('file');
+
+      if (file) {
+        viewer.loadStructureFromUrl(file, 'cif').catch(err => {
+          document.getElementById('app').innerText = 'Error loading CIF file: ' + err.message;
+          console.error(err);
+        });
+      } else {
+        document.getElementById('app').innerText = 'No file specified in the URL.';
+      }
+    });
   </script>
 </body>
 </html>
