--- a/viewer.html
+++ b/viewer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Mol* Viewer (UMD)</title>
-  <script src="https://cdn.jsdelivr.net/npm/molstar@1.2.0/build/viewer/molstar.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/molstar@1.2.0/build/viewer/molstar.umd.js"></script>
   <style>
     html, body { margin: 0; padding: 0; height: 100%; width: 100%; }
     #app { width: 100%; height: 100vh; }
