--- a/viewer.html
+++ b/viewer.html
@@ -2,17 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mol* Viewer (UMD)</title>
-  <script src="https://cdn.jsdelivr.net/npm/molstar@1.2.0/build/viewer/molstar.umd.js"></script>
+  <title>Mol* Viewer (Safe Load)</title>
   <style>
     html, body { margin: 0; padding: 0; height: 100%; width: 100%; }
     #app { width: 100%; height: 100vh; }
   </style>
 </head>
 <body>
-  <div id="app">Initializing viewer...</div>
+  <div id="app">Loading Mol* Viewer...</div>
   <script>
-    window.addEventListener('DOMContentLoaded', () => {
+    function loadScript(src, callback) {
+      const script = document.createElement('script');
+      script.src = src;
+      script.onload = callback;
+      script.onerror = () => {
+        document.getElementById('app').innerText = 'Failed to load Mol* script.';
+      };
+      document.head.appendChild(script);
+    }
+
+    loadScript('https://cdn.jsdelivr.net/npm/molstar@1.2.0/build/viewer/molstar.umd.js', () => {
+      if (typeof Molstar === 'undefined') {
+        document.getElementById('app').innerText = 'Molstar is not defined after loading.';
+        return;
+      }
+
       const viewer = new Molstar.Viewer('app', {
         layoutIsExpanded: true,
         layoutShowControls: true,
