--- a/viewer.html
+++ b/viewer.html
@@ -2,20 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mol* Test</title>
-  <script src="https://cdn.jsdelivr.net/npm/molstar@1.2.0/build/viewer/molstar.umd.js"></script>
+  <title>Mol* Viewer (EBI Version)</title>
+  <script src="https://www.ebi.ac.uk/pdbe/molstar/molstar.js"></script>
+  <link rel="stylesheet" href="https://www.ebi.ac.uk/pdbe/molstar/molstar.css" />
+  <style>
+    html, body { margin: 0; padding: 0; height: 100%; width: 100%; }
+    #app { width: 100%; height: 100vh; }
+  </style>
 </head>
 <body>
-  <pre id="out">Testing...</pre>
+  <div id="app"></div>
   <script>
     window.addEventListener('DOMContentLoaded', () => {
-      const out = document.getElementById('out');
-
-      if (typeof Molstar === 'undefined') {
-        out.innerText = 'Molstar is NOT defined.';
-      } else {
-        out.innerText = 'Molstar IS defined.\n\n' + Object.keys(Molstar).join('\n');
+      const file = new URLSearchParams(window.location.search).get('file');
+      if (!file) {
+        document.getElementById('app').innerText = 'No CIF file specified.';
+        return;
       }
+
+      const viewerInstance = new PDBeMolstarPlugin();
+      viewerInstance.render('app', {
+        customData: {
+          url: file,
+          format: 'cif'
+        },
+        ui: true
+      });
     });
   </script>
 </body>
