--- a/viewer.html
+++ b/viewer.html
@@ -10,15 +10,17 @@
       margin: 0;
       font-family: sans-serif;
       height: 100%;
+      display: flex;
+      flex-direction: column;
     }
     #topbar {
       padding: 10px;
       background: #f5f5f5;
       border-bottom: 1px solid #ccc;
+      z-index: 1000;
     }
     #viewer-container {
-      width: 100%;
-      height: calc(100vh - 60px);
+      flex: 1;
     }
   </style>
 </head>
@@ -54,27 +56,22 @@
     select.addEventListener('change', () => {
       const filename = select.value;
       if (!filename) return;
+
       const fileUrl = BASE_URL + encodeURIComponent(filename);
 
       if (!viewer) {
         viewer = new PDBeMolstarPlugin();
-        viewer.render('viewer-container', {
-          customData: {
-            url: fileUrl,
-            format: 'cif'
-          },
-          ui: true
-        });
-      } else {
-        viewer.render('viewer-container', {
-          customData: {
-            url: fileUrl,
-            format: 'cif'
-          },
-          ui: true
-        });
       }
+
+      viewer.render('viewer-container', {
+        customData: {
+          url: fileUrl,
+          format: 'cif'
+        },
+        ui: true
+      });
     });
   </script>
 </body>
 </html>
+
