--- a/viewer.html
+++ b/viewer.html
@@ -2,81 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Protein Structure Viewer</title>
+  <title>Mol* Viewer Frame</title>
   <script src="https://cdn.jsdelivr.net/npm/pdbe-molstar@latest/build/pdbe-molstar-plugin.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pdbe-molstar@latest/build/pdbe-molstar.css" />
   <style>
     html, body {
       margin: 0;
-      font-family: sans-serif;
       height: 100%;
-      display: flex;
-      flex-direction: column;
-    }
-    #topbar {
-      padding: 10px;
-      background: #f5f5f5;
-      border-bottom: 1px solid #ccc;
-      z-index: 1000;
+      width: 100%;
     }
     #viewer-container {
-      flex: 1;
+      width: 100%;
+      height: 100%;
     }
   </style>
 </head>
 <body>
-  <div id="topbar">
-    <label for="fileSelect">Select a structure: </label>
-    <select id="fileSelect">
-      <option value="">-- choose a file --</option>
-    </select>
-  </div>
   <div id="viewer-container"></div>
-
   <script>
-    const BASE_URL = 'https://structural-interactome.github.io/human-interactome/interaction_structures/';
-    const CSV_URL = 'https://raw.githubusercontent.com/structural-interactome/human-interactome/refs/heads/main/list/File_Name_List.csv';
+    const viewer = new PDBeMolstarPlugin();
 
-    const select = document.getElementById('fileSelect');
-    let viewer;
+    window.addEventListener('message', event => {
+      const fileUrl = event.data;
+      if (!fileUrl.endsWith('.cif')) return;
 
-    // Load CSV
-    fetch(CSV_URL)
-      .then(res => res.text())
-      .then(text => {
-        const lines = text.trim().split('\n').slice(1); // Skip header
-        lines.forEach(filename => {
-          const option = document.createElement('option');
-          option.value = filename.trim();
-          option.textContent = filename.trim();
-          select.appendChild(option);
-        });
-      });
-
-    // Initialize viewer once, outside of selection event
-    window.addEventListener('DOMContentLoaded', () => {
-      viewer = new PDBeMolstarPlugin();
       viewer.render('viewer-container', {
-        customData: {
-          url: '', // initially empty
-          format: 'cif'
-        },
+        customData: { url: fileUrl, format: 'cif' },
         ui: true
       });
-    });
-
-    // On structure selection
-    select.addEventListener('change', () => {
-      const filename = select.value;
-      if (!filename) return;
-
-      const fileUrl = BASE_URL + encodeURIComponent(filename);
-
-      viewer.load({
-        url: fileUrl,
-        format: 'cif'
-      });
-    });
+    }, false);
   </script>
 </body>
 </html>
